mydigitalmeal/assets/scss/base/typography.scss
@use '../abstracts/index' as *;

// Hyperlinks
a,
.btn-link {
  text-decoration: underline;
  text-underline-offset: 5px;
  text-decoration-thickness: 0.075em;
  color: var(--mdm-font-color-main);

  &:hover {
    color: var(--mdm-font-color-main);
    filter: brightness(70%);
  }
}

.btn-link {
  background: none;
  border: none;
  padding: 0;
}

ul {
  padding-left: 1rem;
}

ol {
  padding-left: 30px;

  @media (min-width: $bp-lg) {
    padding-left: 30px;
  }
}

// Text Classes
.mdm-title {
  font-size: 30px;
  line-height: 36px;
  font-family: var(--mdm-ff-headers-participation);
  font-weight: bold;
  color: var(--mdm-font-color-main);
  word-wrap: anywhere;

  @media (min-width: $bp-sm) {
    font-size: 50px;
    line-height: 60px;
  }
}

.mdm-subtitle {
  font-size: 22px;
  line-height: 29px;
  font-family: var(--mdm-ff-headers-participation);
  color: var(--mdm-font-color-main);
  word-wrap: anywhere;

  @media (min-width: $bp-sm) {
    font-size: 37px;
    line-height: 48px;
  }

  @media (min-width: $bp-lg) {
    font-size: 35px;
    line-height: 42px;
  }
}

.mdm-lead {
  font-size: 22px; //28px;
  line-height: 29px; // 34px;
  font-family: var(--mdm-ff-headers-participation);
  color: var(--mdm-font-color-main);
  margin-bottom: 2rem;
  word-wrap: anywhere;

  @media (min-width: $bp-sm) {
    font-size: 37px;
    line-height: 48px;
    margin-bottom: 3.5rem;
  }

  @media (min-width: $bp-lg) {
    font-size: 53px;
    line-height: 68px;
  }
}

.mdm-text {
  font-size: 18px; //20px;
  line-height: 23px; //28px;
  font-family: var(--mdm-ff-space-grotesk);
  color: var(--mdm-font-color-main);

  @media (min-width: $bp-sm) {
    font-size: 30px;
    line-height: 39px;
  }

  @media (min-width: $bp-md) {
    font-size: 30px;
    line-height: 39px;
  }

}

.mdm-text-muted {
  @extend .mdm-text;

  color: var(--mdm-font-color-muted);

  a {
    color: var(--mdm-font-color-muted);
  }
}

.mdm-list-participation {
  font-size: 18px; // 29px;
  line-height: 23px; // 28px;
  text-align: left;
  font-family: var(--mdm-ff-text-participation);
  color: var(--mdm-font-color-main);

  li {
    padding-left: 10px;
    padding-bottom: 8px;
    line-height: 39px;
  }

  @media (min-width: $bp-sm) {
    font-size: 30px;
    line-height: 39px;
  }

}

.mdm-info-lead {
  font-size: 22px; //28px;
  line-height: 29px; //34px;
  font-family: var(--mdm-ff-headers-participation);
  color: var(--mdm-font-color-main);
  text-align: left;

  @media (min-width: $bp-sm) {
    font-size: 37px;
    line-height: 48px;
  }

  @media (min-width: $bp-lg) {
    font-size: 35px;
    line-height: 42px;
    text-align: center;
  }
}

.mdm-info-text {
  font-size: 18px; //20px;
  line-height: 23px; //28px;
  font-family: var(--mdm-ff-text-info);
  color: var(--mdm-font-color-main);
  word-break: break-word;

  @media (min-width: $bp-sm) {
    font-size: 24px;
    line-height: 32px;
  }

  @media (min-width: $bp-lg) {
    font-size: 24px;
    line-height: 29px;
  }
}

.mdm-list-info {
  font-size: 18px; //20px;
  line-height: 23px; //28px;
  font-family: var(--mdm-ff-text-info);
  color: var(--mdm-font-color-main);

  li {
    padding-left: 10px;
    padding-bottom: 8px;
  }

  @media (min-width: $bp-sm) {
    font-size: 24px;
    line-height: 32px;
  }

  @media (min-width: $bp-lg) {
    font-size: 24px;
    line-height: 29px;
  }
}

// Lists
.mdm-list-container {
  padding-left: 5px;
  padding-right: 5px;
  text-align: start;

  @media (min-width: $bp-sm) {
    padding-left: 40px;
    padding-right: 40px;
  }

  @media (min-width: $bp-lg) {
    padding-left: 10%;
    padding-right: 10%;
  }

  @media (min-width: $bp-xl) {
    padding-left: 15%;
    padding-right: 15%;
  }

}

ul.mdm-list,
ul.mdm-list-info {
  list-style-type: "–";
  padding-left: 15px;

  @media (min-width: $bp-lg) {
    padding-left: 15px;
  }
}

ul.mdm-list-participation {
  list-style-type: "–";
  padding-left: 15px;
}

.mdm-list-item {
  padding-left: 10px;
  padding-bottom: 8px;
}

// Titles
.base-info-container {

  h1 {
    text-align: start;

    @media (min-width: $bp-lg) {
      text-align: center;
    }
  }

  h2 {
    font-size: 22px;
    line-height: 29px;
    font-family: var(--mdm-ff-headers-participation);
    color: var(--mdm-font-color-main);
    word-wrap: anywhere;

    @media (min-width: $bp-sm) {
      font-size: 37px;
      line-height: 48px;
    }

    @media (min-width: $bp-lg) {
      font-size: 35px;
      line-height: 42px;
    }
  }
}

